<resources>
    <string name="app_name">Trucktrolly_user</string>
    <string name="action_settings">Settings</string>

    <!--String for sign up screen-->
    <string name="create_account">Create your account</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="sign_up_with">Sign Up with</string>
    
    <!--Strings for login screen-->
    <string name="truck_trolly">TruckTrolly</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="remember_me">Remember me</string>

</resources>
